# clinvoice_match

./: Cargo.toml  LICENSE  README.md  package-lock.json
src/: lib.rs  match.rs  match_contact.rs  match_department.rs  match_employee.rs  match_expense.rs  match_invoice.rs  match_job.rs  match_location.rs  match_option.rs  match_organization.rs  match_set.rs  match_str.rs  match_timesheet.rs
src/match/: bit_and.rs  bit_or.rs  bit_xor.rs  exchange.rs  exchangeable.rs  from_iter.rs  not.rs
src/match_contact/: from.rs  match_contact_kind.rs
src/match_contact/match_contact_kind/: from.rs
src/match_department/: from.rs
src/match_employee/: from.rs
src/match_expense/: exchange.rs  exchangeable.rs  from.rs
src/match_invoice/: exchange.rs  exchangeable.rs  from.rs
src/match_job/: exchange.rs  exchangeable.rs  from.rs
src/match_location/: from.rs  match_outer_location.rs
src/match_option/: from.rs
src/match_organization/: from.rs
src/match_set/: bit_and.rs  bit_or.rs  bit_xor.rs  exchange.rs  exchangeable.rs  from_iter.rs  not.rs
src/match_str/: bit_and.rs  bit_or.rs  bit_xor.rs  default.rs  from_iter.rs  not.rs
src/match_timesheet/: exchange.rs  exchangeable.rs  from.rs
