# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = 'winvoice-match'
version = '0.13.1'
authors = ['Iron-E <code.iron.e@gmail.com>']
description = 'Strongly-typed match conditions for Winvoice'

edition = '2021'
license = 'GPL3'
readme = 'README.md'
repository = 'https://www.github.com/Iron-E/winvoice-match'

[dependencies]
humantime-serde = '1'
money2 = "0.8"
thiserror = '1'

[dependencies.serde]
optional = true
version = "1"

[dependencies.winvoice-schema]
branch = 'release/0.15'
git = 'https://github.com/Iron-E/winvoice-schema'

[dev-dependencies]
pretty_assertions = "1"
regex = "1"
serde_json = "1"
serde_yaml = "0.8"
uuid = "1"

[features]
default = []
serde = ["money2/serde", "serde/derive", "winvoice-schema/serde"]
